# Climbing_Assistant

./: Dockerfile  pyproject.toml
.github/workflows/: docker-image.yml
python_fast_api/: main.py
python_fast_api/routers/: analyze_image.py
python_fast_api/static/: index.html
