[tool.poetry]
name = "python-fast-api"
version = "0.1.0"
description = ""
authors = ["Anand <anandsamra55@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
ariadne = "^0.26.2"
python-multipart = "^0.0.20"
ultralytics = "^8.3.192"
opencv-python = "^4.12.0.88"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
